done landing page

--- a/src/html/home.html
+++ b/src/html/home.html
@@ -14,14 +14,15 @@
         <my-header with-img></my-header>
         <main id="main">
             <landing-page></landing-page>
+            <news-room></news-room>
         </main>
         <my-footer></my-footer>
         <script type="module" src="../components/Header.ts"></script>
         <script type="module" src="../components/Footer.ts"></script>
         <script type="module" src="../components/LandingPage.ts"></script>
-        <script type="module" src="../components/sub-components/LandingPageList.ts"></script>
-        <script type="module" src="../components/sub-components/LandingPageMobileNewsroom.ts"></script>
-        <script type="module" src="../components/sub-components/LandingPageBigNewsroom.ts"></script>
+        <script type="module" src="../components/Newsroom.ts"></script>
+        <script type="module" src="../components/sub-components/NewsroomMobile.ts"></script>
+        <script type="module" src="../components/sub-components/NewsroomBig.ts"></script>
         <script type="module" src="../js/clickOutside.js"></script>
     </body>
 </html>
