--- a/src/html/sectors.html
+++ b/src/html/sectors.html
@@ -7,7 +7,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,200;0,300;0,400;0,600;1,200;1,300;1,400;1,600&family=Nunito&family=Unna:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
-        <title>T&P Consulting - Services</title>
+        <title>T&P Consulting - Sectors</title>
         <link rel="stylesheet" href="../shared/tailwind.global.css">
         <link
         rel="stylesheet"
@@ -17,12 +17,12 @@
     <body>
         <my-header></my-header>
         <main id="main">
-            <my-services></my-services>
+            <my-sectors></my-sectors>
         </main>
         <my-footer></my-footer>
         <script type="module" src="../components/Header.ts"></script>
         <script type="module" src="../components/Footer.ts"></script>
-        <script type="module" src="../components/Services.ts"></script>
+        <script type="module" src="../components/Sectors.ts"></script>
         <script type="module" src="../js/clickOutside.js"></script>
     </body>
 </html>
