fixed contact page

--- a/src/html/contact.html
+++ b/src/html/contact.html
@@ -13,7 +13,7 @@
     <body>
         <my-header></my-header>
         <main id="main">
-            <my-contact></my-contact>>
+            <my-contact></my-contact>
         </main>
         <my-footer></my-footer>
         <script type="module" src="../components/Header.ts"></script>
